welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:2: error: ')' expected but integer literal found.
	return (if (die1 == die 2 && noDoubles) if (die==6) die1+die2 - 5 else die1+die2 +1 else die1 +die 2 )
                                ^withoutDoubles:3: error: illegal start of simple expression
}
^